--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Thesis Progress
-logo: /247.jpg
-description: Circles in a Circle, Wassily Kandinsky, 1923
+logo: /28.jpg
+description: Untitled, Wassily Kandinsky, 1910
